lib/jsapi_wrap.rb

  attach_function :JS_SetObjectPrincipalsFinder, [ :pointer, :JSObjectPrincipalsFinder ], :JSObjectPrincipalsFinder
  attach_function :JS_NewFunction, [ :pointer, :JSNative, :uint, :uint, :pointer, :string ], :pointer
  attach_function :JS_GetFunctionObject, [ :pointer ], :pointer
  attach_function :JS_GetFunctionName, [ :pointer ], :string
  attach_function :JS_GetFunctionId, [ :pointer ], :pointer
  attach_function :JS_GetFunctionFlags, [ :pointer ], :uint
  attach_function :JS_GetFunctionArity, [ :pointer ], :ushort
  attach_function :JS_ObjectIsFunction, [ :pointer, :pointer ], :int
  attach_function :JS_DefineFunctions, [ :pointer, :pointer, :pointer ], :int
  attach_function :JS_DefineFunction, [ :pointer, :pointer, :string, :JSNative, :uint, :uint ], :pointer
  attach_function :JS_DefineUCFunction, [ :pointer, :pointer, :pointer, :uint, :JSNative, :uint, :uint ], :pointer
  attach_function :JS_CloneFunctionObject, [ :pointer, :pointer, :pointer ], :pointer
  attach_function :JS_BufferIsCompilableUnit, [ :pointer, :pointer, :string, :uint ], :int
  attach_function :JS_CompileScript, [ :pointer, :pointer, :string, :uint, :string, :uint ], :pointer
  attach_function :JS_CompileScriptForPrincipals, [ :pointer, :pointer, :pointer, :string, :uint, :string, :uint ], :pointer
  attach_function :JS_CompileUCScript, [ :pointer, :pointer, :pointer, :uint, :string, :uint ], :pointer
  attach_function :JS_CompileUCScriptForPrincipals, [ :pointer, :pointer, :pointer, :pointer, :uint, :string, :uint ], :pointer
  attach_function :JS_CompileFile, [ :pointer, :pointer, :string ], :pointer
  attach_function :JS_CompileFileHandle, [ :pointer, :pointer, :string, :pointer ], :pointer
  attach_function :JS_CompileFileHandleForPrincipals, [ :pointer, :pointer, :string, :pointer, :pointer ], :pointer
  attach_function :JS_NewScriptObject, [ :pointer, :pointer ], :pointer
  attach_function :JS_GetScriptObject, [ :pointer ], :pointer
  attach_function :JS_DestroyScript, [ :pointer, :pointer ], :void
  attach_function :JS_CompileFunction, [ :pointer, :pointer, :string, :uint, :pointer, :string, :uint, :string, :uint ], :pointer
  attach_function :JS_CompileFunctionForPrincipals, [ :pointer, :pointer, :pointer, :string, :uint, :pointer, :string, :uint, :string, :uint ], :pointer
  attach_function :JS_CompileUCFunction, [ :pointer, :pointer, :string, :uint, :pointer, :pointer, :uint, :string, :uint ], :pointer
  attach_function :JS_CompileUCFunctionForPrincipals, [ :pointer, :pointer, :pointer, :string, :uint, :pointer, :pointer, :uint, :string, :uint ], :pointer
  attach_function :JS_DecompileScript, [ :pointer, :pointer, :string, :uint ], :pointer
  attach_function :JS_DecompileFunction, [ :pointer, :pointer, :uint ], :pointer
  attach_function :JS_DecompileFunctionBody, [ :pointer, :pointer, :uint ], :pointer
  attach_function :JS_ExecuteScript, [ :pointer, :pointer, :pointer, :pointer ], :int
  JSEXEC_PROLOG = 0
  JSEXEC_MAIN = 1

  attach_function :JS_ExecuteScriptPart, [ :pointer, :pointer, :pointer, :int, :pointer ], :int
  attach_function :JS_EvaluateScript, [ :pointer, :pointer, :string, :uint, :string, :uint, :pointer ], :int
  attach_function :JS_EvaluateScriptForPrincipals, [ :pointer, :pointer, :pointer, :string, :uint, :string, :uint, :pointer ], :int
  attach_function :JS_EvaluateUCScript, [ :pointer, :pointer, :pointer, :uint, :string, :uint, :pointer ], :int
  attach_function :JS_EvaluateUCScriptForPrincipals, [ :pointer, :pointer, :pointer, :pointer, :uint, :string, :uint, :pointer ], :int
  attach_function :JS_CallFunction, [ :pointer, :pointer, :pointer, :uint, :pointer, :pointer ], :int
  attach_function :JS_CallFunctionName, [ :pointer, :pointer, :string, :uint, :pointer, :pointer ], :int
  attach_function :JS_CallFunctionValue, [ :pointer, :pointer, :long, :uint, :pointer, :pointer ], :int
  attach_function :JS_SetBranchCallback, [ :pointer, :JSBranchCallback ], :JSBranchCallback
  attach_function :JS_IsRunning, [ :pointer ], :int
  attach_function :JS_IsConstructing, [ :pointer ], :int
  attach_function :JS_IsAssigning, [ :pointer ], :int
  attach_function :JS_SetCallReturnValue2, [ :pointer, :long ], :void
  attach_function :JS_SaveFrameChain, [ :pointer ], :pointer
  attach_function :JS_RestoreFrameChain, [ :pointer, :pointer ], :void
  attach_function :JS_NewString, [ :pointer, :string, :uint ], :pointer
  attach_function :JS_NewStringCopyN, [ :pointer, :string, :uint ], :pointer
  attach_function :JS_NewStringCopyZ, [ :pointer, :string ], :pointer
  attach_function :JS_InternString, [ :pointer, :string ], :pointer
  attach_function :JS_NewUCString, [ :pointer, :pointer, :uint ], :pointer
  attach_function :JS_NewUCStringCopyN, [ :pointer, :pointer, :uint ], :pointer
  attach_function :JS_NewUCStringCopyZ, [ :pointer, :pointer ], :pointer
  attach_function :JS_InternUCStringN, [ :pointer, :pointer, :uint ], :pointer
  attach_function :JS_InternUCString, [ :pointer, :pointer ], :pointer
  attach_function :JS_GetStringBytes, [ :pointer ], :string
  attach_function :JS_GetStringChars, [ :pointer ], :pointer
  attach_function :JS_GetStringLength, [ :pointer ], :uint
  attach_function :JS_CompareStrings, [ :pointer, :pointer ], :int
  attach_function :JS_NewGrowableString, [ :pointer, :pointer, :uint ], :pointer
  attach_function :JS_NewDependentString, [ :pointer, :pointer, :uint, :uint ], :pointer
  attach_function :JS_ConcatStrings, [ :pointer, :pointer, :pointer ], :pointer
  attach_function :JS_UndependString, [ :pointer, :pointer ], :pointer
  attach_function :JS_MakeStringImmutable, [ :pointer, :pointer ], :int
  attach_function :JS_CStringsAreUTF8, [  ], :int
  attach_function :JS_EncodeCharacters, [ :pointer, :pointer, :uint, :string, :pointer ], :int
  attach_function :JS_DecodeBytes, [ :pointer, :string, :uint, :pointer, :pointer ], :int
  class JSLocaleCallbacks < FFI::Struct
    layout(
           :localeToUpperCase, :JSLocaleToUpperCase,
           :localeToLowerCase, :JSLocaleToLowerCase,
           :localeCompare, :JSLocaleCompare,
           :localeToUnicode, :JSLocaleToUnicode,
           :localeGetErrorMessage, :JSErrorCallback
    )
  end
  attach_function :JS_SetLocaleCallbacks, [ :pointer, :pointer ], :void
  attach_function :JS_GetLocaleCallbacks, [ :pointer ], :pointer
  attach_function :JS_ReportError, [ :pointer, :string, :varargs ], :void
  attach_function :JS_ReportErrorNumber, [ :pointer, :JSErrorCallback, :pointer, :uint, :varargs ], :void
  attach_function :JS_ReportErrorNumberUC, [ :pointer, :JSErrorCallback, :pointer, :uint, :varargs ], :void
  attach_function :JS_ReportWarning, [ :pointer, :string, :varargs ], :int
  attach_function :JS_ReportErrorFlagsAndNumber, [ :pointer, :uint, :JSErrorCallback, :pointer, :uint, :varargs ], :int
  attach_function :JS_ReportErrorFlagsAndNumberUC, [ :pointer, :uint, :JSErrorCallback, :pointer, :uint, :varargs ], :int
  attach_function :JS_ReportOutOfMemory, [ :pointer ], :void
  class JSErrorReport < FFI::Struct
    layout(
           :filename, :string,
           :lineno, :uint,
           :linebuf, :string,
           :tokenptr, :string,
           :uclinebuf, :pointer,
           :uctokenptr, :pointer,
           :flags, :uint,
           :errorNumber, :uint,
           :ucmessage, :pointer,
           :messageArgs, :pointer
    )
  end
  JSREPORT_ERROR = 0x0
  JSREPORT_WARNING = 0x1
  JSREPORT_EXCEPTION = 0x2
  JSREPORT_STRICT = 0x4
  attach_function :JS_SetErrorReporter, [ :pointer, :JSErrorReporter ], :JSErrorReporter
  JSREG_FOLD = 0x01
  JSREG_GLOB = 0x02
  JSREG_MULTILINE = 0x04
  attach_function :JS_NewRegExpObject, [ :pointer, :string, :uint, :uint ], :pointer
  attach_function :JS_NewUCRegExpObject, [ :pointer, :pointer, :uint, :uint ], :pointer
  attach_function :JS_SetRegExpInput, [ :pointer, :pointer, :int ], :void
  attach_function :JS_ClearRegExpStatics, [ :pointer ], :void
  attach_function :JS_ClearRegExpRoots, [ :pointer ], :void
  attach_function :JS_IsExceptionPending, [ :pointer ], :int
  attach_function :JS_GetPendingException, [ :pointer, :pointer ], :int
  attach_function :JS_SetPendingException, [ :pointer, :long ], :void
  attach_function :JS_ClearPendingException, [ :pointer ], :void
  attach_function :JS_ReportPendingException, [ :pointer ], :int
  attach_function :JS_SaveExceptionState, [ :pointer ], :pointer
  attach_function :JS_RestoreExceptionState, [ :pointer, :pointer ], :void
  attach_function :JS_DropExceptionState, [ :pointer, :pointer ], :void
  attach_function :JS_ErrorFromException, [ :pointer, :long ], :pointer
  attach_function :JS_ThrowReportedError, [ :pointer, :string, :pointer ], :int

  #FIXME: this should be in a helper module
  def self.js_bit(n)       
    1 << n
  end

  JSOPTION_VAROBJFIX = js_bit(2)

end
